log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 06:52:55 PM UTC 2026: 
 graph.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:58:5: error: unknown type name ‘edge’; did you mean ‘Edge’?
   58 |     edge peso=first_list(auxi->value);
      |     ^~~~
      |     Edge
graph.c:58:15: error: implicit declaration of function ‘first_list’ [-Wimplicit-function-declaration]
   58 |     edge peso=first_list(auxi->value);
      |               ^~~~~~~~~~
graph.c:60:15: error: comparison between pointer and integer [-Werror]
   60 |     while(peso!=NULL){
      |               ^~
graph.c:62:31: error: invalid type argument of ‘->’ (have ‘int’)
   62 |         if (strcmp((void*)peso->target, (void*)label2)==0){
      |                               ^~
graph.c:63:24: error: invalid type argument of ‘->’ (have ‘int’)
   63 |             return peso->weight;
      |                        ^~
graph.c:65:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   65 |         peso=list_next(auxi->value);
      |             ^
cc1: all warnings being treated as errors
a771188
Fri May 15 06:53:12 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:58:15: error: implicit declaration of function ‘first_list’ [-Wimplicit-function-declaration]
   58 |     Edge peso=first_list(auxi->value);
      |               ^~~~~~~~~~
graph.c:58:15: error: invalid initializer
graph.c:60:15: error: invalid operands to binary != (have ‘Edge’ and ‘void *’)
   60 |     while(peso!=NULL){
      |               ^~
graph.c:62:31: error: invalid type argument of ‘->’ (have ‘Edge’)
   62 |         if (strcmp((void*)peso->target, (void*)label2)==0){
      |                               ^~
graph.c:63:24: error: invalid type argument of ‘->’ (have ‘Edge’)
   63 |             return peso->weight;
      |                        ^~
graph.c:65:14: error: incompatible types when assigning to type ‘Edge’ from type ‘void *’
   65 |         peso=list_next(auxi->value);
      |              ^~~~~~~~~
5ba0d74
Fri May 15 06:53:41 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:58:16: error: implicit declaration of function ‘first_list’ [-Wimplicit-function-declaration]
   58 |     Edge *peso=first_list(auxi->value);
      |                ^~~~~~~~~~
graph.c:58:16: error: initialization of ‘Edge *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
1ace691
Fri May 15 06:54:26 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
ba6df6a
Fri May 15 06:55:24 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
1e825b8
